Reworked most figures
Former-commit-id: 2da696b2a357f50c00dddb18b267fe83ff2c3719

--- a/Write_Up/discussion.tex
+++ b/Write_Up/discussion.tex
@@ -3,3 +3,5 @@
 Mosquito-borne disease transmission is dependent on both natural and human environmental factors, such as climate, land use, health infrastructure, host demographics- using only climate will overestimate impact of climate change on populations \citep{Parham2015}
 
 Aggregation of precipitation will lose the importance of quick torrential rains likely to flush immature mosquitoes \citep{Koenraadt2008}
+
+Even if monthly aggregated data captures more of the variation, we're talking aggregation not surveillence protocol. Studies have shown lower sampling error when doing more frequent (1/week) sampling versus less frequent but more sampling (2/fortnight) \citep{MagbityLines2002}
