--- a/Write_Up/methods.tex
+++ b/Write_Up/methods.tex
@@ -48,7 +48,9 @@ I used univariate generalized additive models for each dataset to determine the 
 \end{equation}
 
 
-$V_t$ is abundance at time $t$, $a_0$ is the intercept, $T_{t-l_T}$ and $P_{t-l_P}$ are the temperature and precipitation at $l_T$ and $l_P$, respectively, time periods prior to time $t$. One is added to abundance at time $t$ in order to prevent undefined values from the logarithm of zero abundance values. $f_1$ is a smooth function comprised of cubic polynomial basis functions. The use of cubic polynomial basis functions has been shown as an effective way to avoid the bias introduced by concurvity with non-parametric basis functions\citep{Dominici2002, Ramsay2003}. Concurvity is the extent to which each predictive smooth function can be approximated by other smooth function predictors and is analogous to multicollinearity in linear models. This can cause unstable estimates of the response variable and cause underestimation of standard error of explanatory variables \citep{Ramsay2003}. 
+$V_t$ is abundance at time $t$, $a_0$ is the intercept, $T_{t-l_T}$ and $P_{t-l_P}$ are the temperature and precipitation at $l_T$ and $l_P$, respectively, time periods prior to time $t$. One is added to abundance at time $t$ in order to prevent undefined values from the logarithm of zero abundance values. $f_1$ is a smooth function comprised of cubic polynomial basis functions. Each smooth function was allowed up to nine basis functions to account for flexibility in the model fit. The penalisation process in GAM fitting reduces the number of basis functions to an optimised number for each smooth function. If a smooth function had fewer than ten unique data points, such as with weekly precipitation datasets with values between zero and seven, this upper limit needed to be lowered. The maximum number of basis functions in these cases was set to one less than the number of unique values for that smooth function. 
+
+The use of cubic polynomial basis functions is an effective way to avoid the underestimation of standard error caused by concurvity with non-parametric basis functions \citep{Dominici2002, Ramsay2003}. Concurvity is the extent to which each smooth function can be approximated by other smooth function predictors and is analogous to multicollinearity in linear models. Because of the way variances are estimated in GAMs, concurvity can cause cause underestimation of p-values and thus lead to Type I errors \citep{Ramsay2003}. I used shrinkage methods to allow for full penalisation of spline complexity and REML (restricted maximum likelihood) for optimising smooth parameter estimates. Both of these smooth function estimation methodologies have been shown to maximise the predictive ability of GAMs \citep{Marra2011}. 
 %I restricted the number of basis functions to nine for most smooth functions. This allowed me to generalise control for overfitting of the GAM across all datasets. Precipitation smooth functions for datasets with fewer than nine unique values for precipitation were set to the maximum number of basis functions allowable. This is equal to the number of unique values of the variable. This was mostly applicable to weekly datasets, which could have a maximum of eight unique values for precipitation.
 
 Each dataset was also fit with two multivariate models, each incorporating temperature and precipitation, and one of which incorporating an autoregressive term.
